--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*----FONTS----*/
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 /*-----RESET-----*/
@@ -18,6 +17,12 @@ body {
   font-size: 20px;
   display: flex;
   text-align: center; }
+
+@keyframes desplazamiento {
+  0% {
+    left: 150%; }
+  100% {
+    left: -100%; } }
 
 header {
   background-color: olivedrab; }
@@ -126,25 +131,55 @@ footer {
   background-color: olivedrab;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap; }
   footer h2 {
     color: white;
-    padding-left: 15px; }
-  footer ul li {
-    display: flex;
-    justify-content: space-around; }
-  footer img {
-    padding-right: 15px;
-    width: 50px;
-    height:  50px; }
-
-@media screen and (max-width: 480px) {
-  .pie
-h2 {
+    padding-left: 15px;
+    padding-top: 20px; }
+  footer .caja {
+    width: 300px;
+    overflow: hidden; }
+  footer .cuadrado {
+    width: 300px;
+    height: 40px;
+    background-color: white;
+    position: relative;
+    margin-top: 15px; }
+  footer .texto {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+    white-space: nowrap;
+    animation: desplazamiento 10s ease-in-out infinite; }
+  footer .seguimiento {
+    margin-top: 20px;
+    margin-right: 15px;
     font-size: 20px; }
-  ul li {
-    font-size: 10px; }
-  img {
-    width: 40px;
-    height: 30px; } }
+  footer .seguimiento a {
+    color: black;
+    text-decoration: none; }
+
+@media screen and (max-width: 650px) {
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; }
+  footer h2 {
+    width: 100%;
+    text-align: center;
+    font-size: 50px; } }
+
+@media screen and (max-width: 670px) {
+  .cuadrado {
+    display: none; }
+  .texto {
+    display: none; } }
+
+@media screen and (max-width: 650px) {
+  .seguimiento a {
+    display: none; } }
