--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,11 +1,33 @@
 @media screen and(
-    max-width: 480px)
+    max-width: 650px)
     {
-    .pie
-        h2{font-size: 20px;}
-
-        ul li {font-size: 10px;}
-
-        img {width: 40px;
-            height: 30px;}
+    footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
     }
+    footer h2{
+        width: 100%;
+        text-align: center;
+        font-size: 50px;
+    }
+}
+
+@media screen and(
+    max-width: 670px)
+    {
+    .cuadrado{
+        display: none;}
+
+    .texto{
+        display: none;}
+}
+
+@media screen and(
+    max-width: 650px)
+    {
+    .seguimiento a{
+        display: none;}
+
+}
