--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,19 +3,48 @@ footer{
     margin-top: 130px;
     margin-bottom: 0;
     background-color: $color-principal;
-    @include flex (flex, space-between, center);
+    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 
     h2
     {color: $color-secundario;
-    padding-left: 15px;}
+    padding-left: 15px;
+    padding-top: 20px;}
 
-    ul li
-    {display: flex;
-    justify-content: space-around;}
+    .caja{
+        width: 300px;
+        overflow: hidden;
+    }
 
-    img
-    {padding-right: 15px;
-    width: 50px;
-    height: 50px;}
+    .cuadrado{
+        width: 300px;
+        height: 40px;
+        background-color: white;
+        position: relative;
+        margin-top: 15px;
+    }
+
+    .texto{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-weight: bold;
+        text-align: center;
+        font-size: 30px;
+        white-space: nowrap;
+        animation: desplazamiento 10s ease-in-out infinite;
+    }
+
+    .seguimiento{
+        margin-top: 20px;
+        margin-right: 15px;
+        font-size: 20px;
+    }
+
+    .seguimiento a{
+        color: $color-terciario;
+        text-decoration: none;
+    }
     }
