--- a/css/estilos.css
+++ b/css/estilos.css
@@ -124,6 +124,31 @@ header {
   margin-top: 30px;
   margin-left: 30px; }
 
+.contenedor-mapa {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  width: 1200px; }
+
+.mapa {
+  margin-top: 40px;
+  margin-left: 20px; }
+
+.formulario {
+  width: 300px;
+  margin-left: 20px;
+  margin-right: 200px;
+  margin-top: 70px; }
+
+.formulario label {
+  display: block;
+  margin-bottom: 10px; }
+
+.formulario input .formulario textarea {
+  width: 100%;
+  margin-bottom: 20px; }
+
 footer {
   height: 75px;
   margin-top: 130px;
