--- a/scss/components/_otraspaginas.scss
+++ b/scss/components/_otraspaginas.scss
@@ -26,3 +26,34 @@
     margin-top: 30px;
     margin-left: 30px;
     }
+
+.contenedor-mapa{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 50px;
+    width: 1200px;
+}
+
+.mapa{
+    margin-top: 40px;
+    margin-left: 20px;
+}
+
+
+.formulario{
+    width: 300px;
+    margin-left: 20px;
+    margin-right: 200px;
+    margin-top: 70px;
+}
+
+.formulario label{
+    display: block;
+    margin-bottom: 10px;
+}
+
+.formulario input .formulario textarea{
+    width: 100%;
+    margin-bottom: 20px;
+}
