--- a/scss/components/_otraspaginas.scss
+++ b/scss/components/_otraspaginas.scss
@@ -32,7 +32,8 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 50px;
-    width: 1200px;
+    
+    max-width: 100%;
 }
 
 .mapa{
