--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -29,5 +29,24 @@
     {
     .seguimiento a{
         display: none;}
+}
 
+@media screen and (
+    max-width: 842px)
+    {
+        .menu{
+            width: 100%;
+            height: auto;}
+}
+
+@media screen and(
+    max-width:900px)
+    {
+    .contenedor-mapa{
+        flex-direction: column;}
+    .mapa{
+        width: 100%;
+        height: 300px;}
+    .formulario{
+        width: 100%;}
 }
