--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -6,6 +6,7 @@ footer{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    width: 100%;
 
     h2
     {color: $color-secundario;
